[gd_scene load_steps=4 format=3 uid="uid://bu1aq5y7rime7"]

[ext_resource type="FontFile" uid="uid://ktnlyqclx0vo" path="res://Assets/Fonts/VCR_OSD_MONO_1.001.ttf" id="1_c521m"]
[ext_resource type="Script" path="res://Scripts/start_menu.gd" id="1_n0er7"]
[ext_resource type="AudioStream" uid="uid://b11x76aq4b6bw" path="res://Assets/Music/Button_Click.mp3" id="3_mqjkk"]

[node name="StartMenu" type="Node2D"]
script = ExtResource("1_n0er7")

[node name="Title" type="Label" parent="."]
offset_left = 806.0
offset_top = 257.0
offset_right = 1112.0
offset_bottom = 424.0
theme_override_fonts/font = ExtResource("1_c521m")
theme_override_font_sizes/font_size = 64
text = "Ship It!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
offset_left = 784.0
offset_top = 564.0
offset_right = 1138.0
offset_bottom = 707.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_c521m")
theme_override_font_sizes/font_size = 64
text = "Start"

[node name="QuitButton" type="Button" parent="."]
offset_left = 784.0
offset_top = 783.0
offset_right = 1138.0
offset_bottom = 926.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_c521m")
theme_override_font_sizes/font_size = 64
text = "Quit"

[node name="ButtonClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_mqjkk")

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
